# spbook-trader

./: .env.example  Cargo.toml  QUICKSTART.md  README.md
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  middleware.rs  routes.rs  websocket.rs
crates/db/: Cargo.toml
crates/db/src/: connection.rs  lib.rs  migrations.rs  repository.rs  schema.rs
crates/ml/: Cargo.toml
crates/ml/src/: evaluation.rs  features.rs  lib.rs  models.rs  training.rs
crates/models/: Cargo.toml
crates/models/src/: betting.rs  error.rs  events.rs  lib.rs  market.rs  predictions.rs
crates/services/: Cargo.toml
crates/services/src/: backtester.rs  data_feed.rs  lib.rs  market_simulator.rs  metrics.rs  monitor.rs  predictor.rs  trader.rs
crates/stream/: Cargo.toml
crates/stream/src/: event_bus.rs  lib.rs  message.rs  redis_stream.rs
docs/: TESTING.md
examples/: api_demo.sh
migrations/: 001_initial_schema.sql
scripts/: run_tests.sh  setup.sh
src/: config.rs  main.rs
tests/: basic_functionality_test.rs  integration_tests.rs  ml_models_tests.rs  mod.rs  performance_tests.rs  trading_engine_tests.rs
