[package]
name = "quant-stream"
version = "0.1.0"
edition = "2021"
description = "Event streaming and message bus"

[dependencies]
tokio = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
crossbeam = { workspace = true }
quant-models = { path = "../models" }